# neverball

./: Makefile.am  configure.ac
doc/: manual.txt
macosx/: Howto.txt  changes.osx
macosx/icons/: dmg-background-source.xcf
